--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+}
