--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  scroll-behavior: smooth !important ;
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
